--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minha Página Web</title>
+    <title>XSOLUTION development</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -19,7 +19,7 @@
     </nav>
     <main>
         <section>
-            <h2>Bem-vindo à minha página!</h2>
+            <h2>Soluções em eletrônica</h2>
             <p>Esta é uma página web simples criada com HTML e CSS.</p>
         </section>
     </main>
