--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
     <main>
         <section>
             <h2>Soluções em eletrônica</h2>
-            <p>Esta é uma página web simples criada com HTML e CSS.</p>
+            <p>
+            - Eletrônica Analógica
+            - Eletrônica Digital
+            - Sistemas Microcontrolados
+            - Placas de circuito dedecadas para sua aplicação
+            </p>
         </section>
     </main>
     <footer>
