--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </nav>
     <main>
         <section>
-            <h2>Soluções em eletrônica</h2>
+            <h2>Soluções em:</h2>
             <p>
             - Eletrônica Analógica
             </p>
