--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             - Sistemas Microcontrolados
             </p>
             <p><BR>
-            - Placas de circuito dedecadas para sua aplicação
+            - Placas de circuito dedecadas
             </p>
         </section>
     </main>
