--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>XSOLUTION development</title>
     <style>
         body {
-            background-image: url('fundo.jpg');
+            background-image: url('Captura de Tela 2024-07-18 às 20.41.25.png');
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
